# course_preview

./: .gitignore  README.md  VScode_Projects.code-workspace  package-lock.json
Bancos_de_dados/: DER meios de pagamento.brM3
Design_software/: pyproject.toml
Estatistica/: atividade_final.aux  atividade_final.fdb_latexmk  atividade_final.fls  atividade_final.tex  generate_graph.py
Ferramentas_lp/: uva10038.py  uva10055.py  uva10071.py  uva10324.py  uva11340.py  uva11942.py  uva12015.py
Frameworks/prova1/: pyproject.toml
Frameworks/prova1/instance/: database.db
Frameworks/prova1/migrations/: env.py
Frameworks/prova1/migrations/versions/: ffc9ab1e2e7d_inicial.py
Frameworks/prova1/prova1/: app.py
Frameworks/prova1/prova1/config/: __init__.py
Frameworks/prova1/prova1/models/: __init__.py  user.py
Frameworks/prova1/prova1/templates/: index.html
Gestao_de_bancos_de_dados/: schema.sql
LP_test/: teste.go
Orientação a Objetos/: ContaCorrente.rb  atributo_classe.py  bnk_new.py  cad_bnk.py  heranca.rb  pessoa.rb  student_age.py
Paradigma_objetos/: ABC_pub.py  heranca.rb  metodo_absitrato.py  overflow.py  salairo_calc.rb
Projetos de banco de dados/: config.chc
Teste_de_software/: ex_av2.py
eletiva/: README.md  main.go  resolucoes.csv  resolucoes.md
ferramentas_lp/: copy.py  funcoes.md  input.txt  uva00591.py  uva10055.py  uva10252.py  uva10614.py  uva11679.py  uva11942.py  uva12250.py
machine_learning/: atividade.md  flowers-dataset.ipynb  imagens.ipynb  iris_dataset.ipynb  lista3.ipynb
seguranca_software/r1/: README.md  main.py  pyproject.toml
(+312 files in other folders)
